[package]
name = "iroh-chat-cli"
version = "0.1.0"
edition = "2024"
default-run = "iroch-chat-cli"

[[bin]]
name = "iroch-chat-cli"
path = "src/chat.rs"

[[bin]]
name = "test01"
path = "src/test01.rs"

[[bin]]
name = "iroch-share-file"
path = "src/share.rs"


[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# data-encoding = "2.9"
futures-lite = "2"
iroh = "0.35"
iroh-blobs = "0.35"
iroh-gossip = "0.35"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
