[package]
name = "iroh-chat-cli"
version = "0.1.1"
edition = "2024"
default-run = "iroh-chat-cli"

[[bin]]
name = "iroh-chat-cli"
path = "src/bin/chat.rs"

[[bin]]
name = "iroh-share-file"
path = "src/bin/share.rs"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
crossterm = "0.29"

[dependencies]
anyhow = "1"
# base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
futures-lite = "2"
iroh = "0.35"
iroh-blobs = "0.35"
iroh-gossip = "0.35"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1.1"
tokio = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
